# coralien

./: .gitignore  README.md  pyproject.toml  setup.py
lib/: cy_sim.pyx  recursive_sim_array_c.c  recursive_sim_array_c.h
src/: launch.py
src/Coralien/: __init__.py  affichage.py  default_settings.json  main.py  renderer.py  rendu.py  settings.py  settings_editor.py  simulation.py
